# super-reference

./: .gitattributes  .gitignore  .gitmodules  Application.hs  Foundation.hs  LICENSE  README.md  Settings.hs  out.bib  refs.bib  stack.yaml  super-reference.cabal
Handler/: .#Home.hs  About.hs  Home.hs  OpenPdf.hs
Settings/: StaticFiles.hs
app/: devel.hs
config/: keter.yml  routes  settings.yml
snaplets/heist/templates/: base.tpl  index.tpl  search.tpl
src/: Application.hs  Site.hs
templates/: about.hamlet  default-layout-wrapper.hamlet  homepage.hamlet  homepage.julius  homepage.lucius  listEntries.hamlet
